Fixed OXUIB-222 Slightly misaligned topbar icons

--- a/ui/apps/themes/components/launcher.less
+++ b/ui/apps/themes/components/launcher.less
@@ -113,6 +113,9 @@
     }
 }
 
+// small adjustment because fa-th icon is not properly centered in font awesome
+// ugly selector to avoid using of important
+html:not(.smartphone) #io-ox-appcontrol #io-ox-toprightbar #io-ox-launcher .launcher-btn { padding: 18px 11px 16px 11px; }
 
 #io-ox-appcontrol {
     position: absolute;
